--- a/config.toml
+++ b/config.toml
@@ -19,6 +19,7 @@ paginate = 10
   disqus = "Marqin"
   highlightjs = "solarized-dark"
   dateFormat = "02 Jan 2006, 15:04"
+  custom_css = ["my.css"]
 
 [menu]
   # Shown in the side menu.
